--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
                     <h3 id="detailTitle">รายละเอียด</h3>
                     <div id="detailBody" class="detail-body"></div>
                 </div>
+                <!-- ผลกระทบหลัก -->
+                <div class="impacts-detail-area hidden anim-fade" style="--d:0.3s" id="impactsDetailArea">
+                    <h3 class="impacts-detail-heading" id="impactsDetailHeading">📋 ผลกระทบหลัก</h3>
+                    <div class="impacts-detail-grid" id="impactsDetailGrid"></div>
+                </div>
                 <div class="chart-box anim-fade" style="--d:0.35s"><canvas id="riskCompareChart"></canvas></div>
                 <div class="chart-box anim-fade" style="--d:0.45s">
                     <h3 class="chart-label" id="impactLabel">ผลกระทบ</h3><canvas id="impactChart"></canvas>
@@ -263,7 +268,76 @@
                 <p>โรคเบาหวานเป็นปัญหาสุขภาพสำคัญที่พบมากและมีแนวโน้มเพิ่มขึ้นต่อเนื่อง
                     สาธารณสุขจังหวัดพะเยามุ่งเน้นการ<strong>คัดกรองประชากรอายุ 35 ปีขึ้นไป</strong></p>
             </div>
-            <div class="health-pills anim-fade" style="--d:0.3s">
+
+            <!-- PM2.5 กับเบาหวาน -->
+            <div class="dm-research-block anim-fade" style="--d:0.22s">
+                <h3 class="dm-research-title">🔬 PM 2.5 กับโรคเบาหวาน</h3>
+                <p class="dm-research-intro">การสัมผัสฝุ่นละออง PM 2.5
+                    มีความสัมพันธ์อย่างมีนัยสำคัญต่อการเพิ่มความเสี่ยงของ<strong>โรคเบาหวานชนิดที่ 2</strong>
+                    และส่งผลกระทบต่อระดับน้ำตาลในเลือดของผู้ป่วยเบาหวานที่มีอยู่เดิม
+                    งานวิจัยระบุว่าฝุ่นขนาดจิ๋วนี้สามารถเข้าสู่กระแสเลือดและกระตุ้นกลไกการอักเสบจนนำไปสู่<strong>ภาวะดื้ออินซูลิน</strong>
+                </p>
+            </div>
+
+            <!-- กลไก 4 ข้อ -->
+            <h3 class="dm-mech-heading anim-fade" style="--d:0.25s">⚙️ กลไกที่ PM 2.5 กระตุ้นโรคเบาหวาน</h3>
+            <div class="dm-mech-grid">
+                <div class="dm-mech-card anim-fade" style="--d:0.28s">
+                    <span class="dmc-icon">🔥</span>
+                    <h4>กระตุ้นการอักเสบเรื้อรัง</h4>
+                    <p>ฝุ่นเข้าสู่ร่างกายกระตุ้นการอักเสบในระบบต่างๆ ซึ่งเป็นสาเหตุหลักที่ขัดขวางการทำงานของอินซูลิน</p>
+                </div>
+                <div class="dm-mech-card anim-fade" style="--d:0.32s">
+                    <span class="dmc-icon">⚡</span>
+                    <h4>Oxidative Stress</h4>
+                    <p>ฝุ่นทำให้เกิดอนุมูลอิสระที่ทำลายเซลล์และเนื้อเยื่อ ส่งผลต่อการควบคุมระดับน้ำตาลในเลือด</p>
+                </div>
+                <div class="dm-mech-card anim-fade" style="--d:0.36s">
+                    <span class="dmc-icon">🛡️</span>
+                    <h4>ภาวะดื้ออินซูลิน</h4>
+                    <p>การอักเสบส่งผลให้ร่างกายตอบสนองต่ออินซูลินลดลง ตับอ่อนต้องทำงานหนักขึ้นเพื่อผลิตอินซูลินชดเชย</p>
+                </div>
+                <div class="dm-mech-card anim-fade" style="--d:0.4s">
+                    <span class="dmc-icon">🫀</span>
+                    <h4>ทำลายตับและตับอ่อน</h4>
+                    <p>การรับฝุ่นระยะยาวทำให้ระดับไขมันในตับสูงขึ้น และอาจทำลายเซลล์เบต้าในตับอ่อนที่ผลิตอินซูลิน</p>
+                </div>
+            </div>
+
+            <!-- ตารางสรุปผลวิจัย -->
+            <div class="dm-research-table-wrap anim-fade" style="--d:0.45s">
+                <h3 class="dm-research-subtitle">📑 สรุปผลกระทบจากงานวิจัย</h3>
+                <div class="dm-research-table-scroll">
+                    <table class="dm-research-table">
+                        <thead>
+                            <tr>
+                                <th>หัวข้อผลกระทบ</th>
+                                <th>รายละเอียดจากงานวิจัย</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><strong>⚠️ ความเสี่ยงโรคใหม่</strong></td>
+                                <td>ทุกๆ 10 μg/m³ ของ PM 2.5 ที่เพิ่มขึ้นในระยะยาว
+                                    อาจเพิ่มความเสี่ยงต่อโรคเบาหวานชนิดที่ 2 ได้ถึง <strong>25%</strong></td>
+                            </tr>
+                            <tr>
+                                <td><strong>🩸 ผลต่อระดับน้ำตาล</strong></td>
+                                <td>การสัมผัสฝุ่นเพียง <strong>28 วัน</strong> สามารถทำให้ค่า HbA1c
+                                    และระดับน้ำตาลขณะอดอาหาร (FPG) สูงขึ้นอย่างมีนัยสำคัญ</td>
+                            </tr>
+                            <tr>
+                                <td><strong>👥 กลุ่มเสี่ยงสูง</strong></td>
+                                <td>ผู้หญิง ผู้สูงอายุ คนอ้วน และผู้ที่มีโรคประจำตัว เช่น ความดันโลหิตสูง
+                                    จะไวต่อผลกระทบของฝุ่นต่อเบาหวานมากกว่าปกติ</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <p class="dm-research-source">แหล่งข้อมูลเพิ่มเติม: โรงพยาบาลกรุงเทพ / วารสารวิจัยและพัฒนาด้านสุขภาพ</p>
+            </div>
+
+            <div class="health-pills anim-fade" style="--d:0.5s">
                 <div class="h-pill"><span class="h-icon">🍬</span><strong>ลดน้ำตาล</strong>
                     <p>เลี่ยงขนมหวาน น้ำหวาน ผลไม้รสหวานจัด</p>
                 </div>
