--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="section-inner narrow">
             <!-- คำถามเชื่อมโยง -->
             <span class="section-label anim-fade">คำถามสำคัญ</span>
-            <h2 class="section-heading anim-scale">โรคอะไร<br>ที่เกิดจากฝุ่นแต่<em>ไม่ถูกพูดถึง</em>บ้าง?</h2>
+            <h2 class="section-heading anim-scale">มีโรคอะไรที่เกิดจากฝุ่น<br>แต่<em>ไม่ถูกพูดถึง</em>บ้าง?</h2>
 
             <div class="text-body anim-fade" style="--d:0.2s">
                 <p>โรคเบาหวานเป็นปัญหาสุขภาพสำคัญที่พบมากและมีแนวโน้มเพิ่มขึ้นต่อเนื่อง
