--- a/index.html
+++ b/index.html
@@ -276,6 +276,10 @@
                     <h3 class="chart-label" id="impactLabel">ผลกระทบ</h3><canvas id="impactChart"></canvas>
                 </div>
                 <div class="disease-grid" id="diseaseGrid"></div>
+                <div class="role-tips-area hidden anim-fade" style="--d:0.55s" id="roleTipsArea">
+                    <h3 class="chart-label" id="roleTipsTitle">คำแนะนำ</h3>
+                    <div class="tips-grid" id="roleTipsGrid"></div>
+                </div>
                 <div class="back-to-roles anim-fade" style="--d:0.6s">
                     <a href="#roles" class="ghost-btn back-roles-btn" id="backToRolesBtn">เลือกอาชีพอื่น</a>
                 </div>
@@ -288,7 +292,8 @@
         <div class="section-inner narrow">
             <!-- คำถามเชื่อมโยง -->
             <span class="section-label anim-fade">คำถามสำคัญ</span>
-            <h2 class="section-heading anim-scale">มีโรคอะไรที่เกิดจากฝุ่น<br>แต่<em>ไม่ถูกพูดถึง</em>บ้าง?</h2>
+            <h2 class="section-heading anim-scale">โรคที่หลายคนเคยได้ยิน<br>แต่ไม่รู้ว่าโรคนี้<em>เกี่ยวข้องกับ
+                    PM2.5</em></h2>
 
             <div class="text-body anim-fade" style="--d:0.2s">
                 <p>โรคเบาหวานเป็นปัญหาสุขภาพสำคัญที่พบมากและมีแนวโน้มเพิ่มขึ้นต่อเนื่อง
